
* #11337: pass 'flags' metadata to root scanners, to optimize stack
  scanning in the bytecode interpreter.
  Changes the interface of user-provided root-scanning hooks.
  (Gabriel Scherer, review by Xavier Leroy,
   Guillaume Munch-Maccagnoni, Sadiq Jaffer and Tom Kelly)

- #11144: Restore frame-pointers support for amd64
  (Fabrice Buoro, review by Frederic Bour and KC Sivaramakrishnan)

### Code generation and optimizations:

- #10972: ARM64 multicore support: OCaml & C stack separation;
  dynamic stack size checks; fiber and effects support.
  (Tom Kelly and Xavier Leroy, review by KC Sivaramakrishnan, Xavier Leroy
  Guillaume Munch-Maccagnoni, Eduardo Rafael, Stephen Dolan and
  Gabriel Scherer)

* #10845 Emit frametable size on amd64 BSD (OpenBSD, FreeBSD, NetBSD) systems
  (emitted for Linux in #8805)
  (Hannes Mehnert, review by Nicolás Ojeda Bär)

### Standard library:

- #10742: Use LXM as the pseudo-random number generator for module Random.
  Add `Random.State.split` and `Random.split` to "split" a PRNG off
  another PRNG.
  (Xavier Leroy, review by Gabriel Scherer and Hugo Heuzard)

* #10867, #11345: Remove deprecated values: Array.create, Array.make_float,
  Array.create_matrix, Bytes.uppercase, Bytes.lowercase, Bytes.capitalize,
  Bytes.uncapitalize, Char.lowercase, Char.uppercase, Filename.temp_dir_name,
  Int32.format, Int64.format, Nativeint.format, Format.bprintf, Format.kprintf,
  Format.set_all_formatter_output_functions,
  Format.get_all_formatter_output_functions,
  Format.pp_set_all_formatter_output_functions,
  Format.pp_get_all_formatter_output_functions, Format.pp_open_tag,
  Format.pp_close_tag, Format.open_tag, Format.close_tag,
  Format.formatter_tag_functions, Format.pp_set_formatter_tag_functions,
  Format.pp_get_formatter_tag_functions, Format.set_formatter_tag_functions,
  Format.get_formatter_tag_functions, Gc (mutability of the fields of type
  Gc.control), Lazy.lazy_from_fun, Lazy.lazy_from_val, Lazy.lazy_is_val,