@@ -48,7 +48,7 @@ enum {
 #define EXTERN_STACK_INIT_SIZE 256
 #define EXTERN_STACK_MAX_SIZE (1024*1024*100)
 
-struct extern_item { value * v; mlsize_t count; };
+struct extern_item { volatile value * v; mlsize_t count; };
 
 /* Hash table to record already-marshaled objects and their positions */
 
